--- a/zh-CN/2.quickstart/1.quickly-experience-oceanbase/1.quickly-experience-oceanbase-for-enterprise.md
+++ b/zh-CN/2.quickstart/1.quickly-experience-oceanbase/1.quickly-experience-oceanbase-for-enterprise.md
@@ -142,7 +142,7 @@ OceanBase 数据库支持部署在 x86_64 以及 ARM_64 架构的物理服务器
 
 + 打开的文件句柄数量不小于 `20000`。
   
-`obd demo` 部署方式采用最小规格部署，部署的组件版本默认为最新版本，默认部署的组件包含 oceanbase-ce、obproxy-ce、obagent、grafana、prometheus。
+`obd demo` 部署方式采用最小规格部署，部署的组件版本默认为最新版本，默认部署的组件包含 oceanbase、obproxy、obagent、grafana、prometheus。
 
   <main id="notice" type='notice'>
     <h4>注意</h4>
