--- a/zh-CN/7.reference/2.administrator-guide/7.management/2.monitoring-and-alerting/3.alert/2.alert-subscription.md
+++ b/zh-CN/7.reference/2.administrator-guide/7.management/2.monitoring-and-alerting/3.alert/2.alert-subscription.md
@@ -1,6 +1,10 @@
-# 告警订阅
+# 告警推送
 
-在 OCP 上完成告警通道配置后，可对告警订阅进行设置。
+在 OCP 上完成告警通道的配置后，您需要配置告警推送，系统会将平台产生的告警消息通过指定的告警通道通知用户。
+
+## 前提条件
+
+已创建告警规则，具体操作请参见 [常用告警规则管理](4.common-alert-item-management.md)。
 
 ## 背景信息
 
@@ -8,64 +12,59 @@
 
 * 管理员配置告警通道
 
-* 用户订阅告警
+* 用户配置告警推送
 
-配置告警发送的步骤：
-
-1. 配置通道。管理员配置告警通道。
-
-2. 新建订阅。用户可以配置自己的订阅。
-
-3. 个人接收配置。用户可以配置是否接收通知以及接收限制。
-
-## 查看告警订阅列表
-
-登录 OCP 之后，在右上角个人中心处展开隐藏列表，并单击 **告警订阅** 。在 **订阅列表** 页签中可以根据 **来源** 和 **集群** 筛选告警。
-
-页面中默认展示 **来源** **、** **订阅集群** **、** **告警项组** **、** **订阅人** 和 **订阅时间** 。
-
-![查看告警订阅列表](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/0455280061/p167669.png)
-
-## 新建订阅
-
-  <main id="notice" type='notice'>
-    <h4>注意</h4>
-    <p>配置告警订阅时，用户只能选择有读权限的集群。如果配置告警订阅之后，对集群的读权限被撤销，那么即使告警订阅配置仍然存在，用户仍然无法接收没有读权限集群的告警消息。</p>
-  </main>
+## 查看告警推送配置列表
 
 1. 登录 OCP。
 
-2. 在右上角个人中心处展开隐藏列表，并单击 **告警订阅** 。
+2. 在左侧导航栏中选择 **系统管理** > **告警** 。
 
-3. 在 **订阅列表** 页签中，单击 **新建订阅** 。
+3. 在 **告警推送** 页签的查询区域输入查询条件，支持对告警推送进行精确查找，**推送配置列表** 中将返回所有符合查询条件的告警推送信息。
 
-4. 在 **新建订阅** 页面填写订阅内容。
+4. 单击要查看的某条告警推送 **操作** 列的 **查看** 。
 
-   订阅项相关说明如下表所示。
+   在 **查看推送配置** 面板中查看该告警推送的详细配置。
 
-   | 订阅项  |                                                                                                                                                                                                                                                        说明                                                                                                                                                                                                                                                         |
-   |------|-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
-   | 告警来源 | 订阅的告警的来源。默认为 **OB** ，可切换为 **应用** 。                                                                                                                                                                                                                                                                                                                                                                                                                                                                                |
-   | 订阅集群 | 选择需要订阅的集群。                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        |
-   | 告警项组 | 选择需要订阅的告警项组。在添加告警项时，可提前将需要关注的告警项加入到对应的告警项组中。 </br>系统默认有 6 个初始化告警项组，默认告警项组的说明如下： <ul><li>**dba** ：数据库管理员关注的告警项。</li>   <li> **dev** ：开发者关注的告警项。   </li>   <li>**oms** ：OMS 应用管理员关注的告警项。</li>   <li>**backup** ：备份恢复管理员需关注的告警项。   </li>   <li>**info** ：提醒信息，如运维操作结果提醒。</li>   <li>**ocp** ：OCP 基础模块告警项，如主机告警。 </li></ul>   |
-   | 告警方式 | 在需订阅的告警等级后勾选其通知的通道，订阅不支持群消息通道，故不在此展示群消息通道。 需至少订阅一个告警定级。                                                                                                                                                                                                                                                                                                                                                                                                                                           |
-
-   ![新建订阅](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/5345442261/p276892.png)
-
-5. 单击 **确定** 。
-
-   配置好告警订阅之后，可以在 **订阅列表** 页面查看详情、编辑或删除订阅。
-
-## 个人接收设置
-
-用户可以配置个人接收设置。
-
-告警有故障恢复提醒消息，此类消息不会进行聚合，因此消息数量可能较多，建议关闭。
+## 新建告警推送
 
 1. 登录 OCP。
 
-2. 在右上角个人中心处展开隐藏列表，并单击 **告警订阅** 。
+2. 在左侧导航栏中选择 **系统管理** > **告警** 。
 
-3. 单击 **个人接收设置** 页签，并根据业务需求自定义配置。
+3. 在 **告警推送** 页签，单击 **告警推送配置** 按钮。
 
-   ![个人告警接收设置](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/0659319061/p206673.png)
+4. 在 **新建推送** 页面的 **推送配置** 模块中选择推送类型。
+
+   系统支持 **告警模板** 推送和 **告警分组** 推送两种模式：
+
+   * 当选择 **告警模板** 推送时，页签下方将展示系统中所有的告警模板，勾选需要推送消息的模板，告警消息将推送至该模板中的所有对象。
+
+     ![告警模板推送](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/ocp/401/%E5%91%8A%E8%AD%A6%E6%A8%A1%E6%9D%BF%E6%8E%A8%E9%80%811.png)
+
+   * 当选择 **告警分组** 推送时，您可选择将告警消息推送至指定对象。若您不设置指定对象，系统将根据分组配置规则及告警对象配置推送告警消息。
+
+     ![告警分组](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/ocp/402-cn/%E5%91%8A%E8%AD%A6%E5%88%86%E7%BB%84.png)
+
+5. 在 **推送消息配置** 模块配置以下内容：
+
+   * 选择推送消息语言，支持 **简体中文**、**繁体中文** 和 **英文**。
+   * 配置告警方式，包括 **告警等级** 和 **告警通道**。
+
+     在需推送的告警等级后选择其通知的通道，若您不想在某个时间段接收告警推送消息，可设置 **指定时间通知** ，不设置则表示全天接收告警消息通知。
+
+     ![推送消息配置1](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/ocp/401/%E6%8E%A8%E9%80%81%E6%B6%88%E6%81%AF%E8%AF%AD%E8%A8%801.png)
+
+   * 选择是否开启告警消息接收限制。开启后可以限定告警通道发送消息的数量，当超过告警接收限制，告警通道将不再推送告警消息。
+
+     ![推送消息配置2](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/ocp/401/%E5%91%8A%E8%AD%A6%E6%B6%88%E6%81%AF%E6%8E%A5%E6%94%B6%E9%99%90%E5%88%B61.png)
+
+   * 选择是否开启恢复通知。
+
+     开启后，推送的告警规则恢复正常时，会发送通知消息。
+
+   * 选择是否启用推送。
+
+     对于创建后暂时不再使用的告警推送，您后续可在此处对其进行禁用。
+
+6. 单击 **提交** 。
