--- a/zh-CN/7.reference/2.administrator-guide/7.management/2.monitoring-and-alerting/3.alert/4.common-alert-item-management.md
+++ b/zh-CN/7.reference/2.administrator-guide/7.management/2.monitoring-and-alerting/3.alert/4.common-alert-item-management.md
@@ -1,71 +1,106 @@
-# 常用告警项管理
+# 常用告警规则管理
 
-您可以通过 OCP 的告警项功能，对常用的告警项进行管理。
+您可以通过 OCP 的告警规则功能，对常用的告警规则进行管理。
 
-## 新建告警项
+## 新建告警规则
 
-OCP 系统内置了一批告警项，您可以查看和编辑系统内置的告警项，OCP 内置的告警项及其说明请参见 OCP 对应版本的 《OCP 告警参考》文档。此外，您也可以根据需要，新建自定义的告警项。
+OCP 系统内置了一批告警规则，您可以查看和编辑系统内置的告警规则，OCP 内置的告警项及其说明请参见 OCP 对应版本的 《OCP 告警参考》文档。此外，您也可以根据需要，新建自定义的告警项。
 
 1. 登录 OCP。
 
 2. 在左侧导航栏中单击 **系统管理** \> **告警** 。
 
-3. 在 **告警项配置** 页签右上角单击 **新建告警项** 。
+3. 在 **告警规则** 页签，单击 **新建告警规则** 。
 
-4. 配置告警项的 **规则信息** 。
+4. 配置告警规则的基本信息。
 
-   1. 设置告警项所属范围。
+   1. 设置告警规则名**。
 
-   2. 根据告警项所属范围的不同，可以在运算规则里选择不同的指标。
+      第三方应用通过 **告警规则名** 对接 OCP 中的告警。仅支持字母、数字和下划线，建议遵循如下命名规则：
 
-   ![p270966](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/2262191261/p277057.png)
+      * OB 集群相关的告警，以 `ob_cluster_` 为前缀。
 
-5. 配置告警项的 **基本信息** 。
+      * OB 租户相关的告警，以 `ob_tenant_` 为前缀。
 
-   1. 设置告警项名称和中文名称。
+      * OB 服务器相关的告警，以 `ob_host_` 为前缀。
 
-   2. 设置告警等级。
+      * OCP 服务器相关的告警，以 `host_` 为前缀。
 
-   3. 根据页面提示设置告警概述模板。
+      * OCP 服务相关的告警，以 `ocp_service_` 为前缀。
 
-   4. 根据页面提示设置告警详情模板。
+      * OBProxy 集群相关的告警，以 `obproxy_cluster_` 为前缀。
 
-      * 告警概述模板用于在通道的模板字段中引用，对应的变量名为 alarm_summary。
+      * OBProxy 服务器相关的告警，以 `obproxy_host_` 为前缀。
 
-      * 告警详情模板用于在通道的模板字段中引用，对应的变量名为 alarm_description。
+   2. 设置说明。
 
-      ![p276978](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/2262191261/p277058.png)
+      需能够简要表明该告警规则的作用。
 
-6. 单击 **确定** 。
+   3. 设置规则分组。
 
-## 新建告警项组
+      将该告警规则加入到已有的规则分组中。
 
-OCP 系统默认有 6 个初始化分组，dba、dev、oms、backup、info 和 ocp。默认分组可以编辑，但无法删除。您也可以创建新的告警项组。
+   4. 选择是否启用告警。
+
+      对于系统内置告警规则及创建后暂时不再使用的告警规则，您后续可在此处对其进行禁用。
+
+5. 配置告警规则信息。
+
+   1. 设置告警对象。
+
+      ![设置告警对象](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/ocp/401/%E5%91%8A%E8%AD%A6%E5%AF%B9%E8%B1%A11.png)
+
+   2. 设置告警规则。
+
+      您可根据业务需求，配置不同的运算规则。系统将根据您配置的告警规则，上报不同级别的告警。其中：
+
+      * 单指标：为告警上报配置单一化的运算规则。多个规则之间不能存在相同的阈值和级别，最多只能配置 5 个规则。
+      * 多指标：适用于更复杂的告警场景，支持对告警规则配置多层级的 AND 或 OR 的指标关系。
+
+      ![p276978](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/ocp/401/%E5%8D%95%E6%8C%87%E6%A0%87%E5%91%8A%E8%AD%A6%E8%A7%84%E5%88%991.png)
+
+   3. 设置告警周期。
+
+      告警周期又指检测周期，系统每个检测周期检查告警是否满足触发条件。检测周期默认为 60 秒。
+
+      上报告警前，每 60 秒检测一次触发条件是否达到，达到则上报告警；上报告警后，每个告警周期内检查告警是否依然还满足触发条件，满足则持续上报。
+
+   4.设置告警的消除周期。
+
+      即设置告警上报的持续时间。消除周期设置完成后，系统会在所设置的时间周期后对该告警进行消除。消除周期默认为 5 分钟。
+
+6. 配置告警详情。
+
+   可通过 ${} 引用变量。告警详情模板会在告警事件中显示，并且对应变量 ${alarm_description}，这个变量可以在告警消息的模板中被引用。
+
+7. 单击 **提交** 。
+
+## 新建规则分组
+
+OCP 系统默认有 6 个初始化分组，dba、dev、oms、backup、info 和 ocp。默认分组可以编辑，但无法删除。您也可以创建新的规则分组。
 
 1. 登录 OCP。
 
 2. 在左侧导航栏中单击 **系统管理** **\>** **告警** 。
 
-3. 在 **告警项配置** 页签中单击 **分组管理** ，进入 **分组管理** 页面。
+3. 在 **告警规则** 页签左侧管理规则分组。
 
-4. 单击 **分组列表** 右侧的创建图标，输入新分组的名称并回车。
+4. 单击 **规则分组** 右侧的创建图标，输入新分组的名称并回车。
 
-   ![创建告警组](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/3825442261/p277039.png)
+   ![创建规则分组](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/ocp/401/%E8%A7%84%E5%88%99%E5%88%86%E7%BB%841.png)
 
-## 添加告警项到告警项组
+## 添加告警规则到规则分组
 
-为了方便配置告警订阅，您可以登录 OCP，将需要关注的告警项添加到告警项组。
+为了方便配置告警推送，您可以登录 OCP，将需要关注的告警规则添加到规则分组。
 
 1. 在左侧导航栏中单击 **系统管理** **\>** **告警** 。
 
-2. 在 **告警项配置** 页签中单击 **分组管理。**
+2. 在 **告警规则** 页签中找到指定的告警规则。
 
-3. 选中待操作的分组，并单击 **管理告警项** 按钮。
+3. 在其对应的**操作**列，单击 **...** 选择 **添加到规则分组**。
 
-   系统弹出 **管理告警项** 对话框，该框左侧显示全部告警项，右侧显示该分组中已有的告警项。
+4. 在弹窗中选择规则分组。
 
-   * 向该分组中添加告警项：勾选左框中待添加的告警，并单击 **\>** 按钮。
+5. 单击 **确定**。
 
-   * 从该分组中移除告警项：勾选右框中待移除的告警，并单击 **\<** 按钮。
-
-   ![p168426](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/1847091261/p276986.png)
+   ![p168426](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/ocp/401/%E6%B7%BB%E5%8A%A0%E5%88%B0%E5%91%8A%E8%AD%A6%E5%88%86%E7%BB%841.png)
