--- a/zh-CN/6.manage/7.monitor/1.monitor-overview.md
+++ b/zh-CN/6.manage/7.monitor/1.monitor-overview.md
@@ -32,25 +32,25 @@ OceanBase 常用的动态性能视图见如下列表：
 
 |视图	| 展示内容 |
 |---|---|
-|`GV$SYSSTAT`|	系统统计信息|
-|`GV$SYSTEM_EVENT`|	租户级等待事件统计|
-|`GV$SESSION_EVENT`|会话级等待事件统计|
-|`GV$LATCH`|锁统计信息|
-|`GV$OB_MEMORY`|	内存信息|
-|`GV$OB_PROCESSLIST`|	会话信息|
-|`GV$OB_TRANSACTION_PARTICIPANTS`|事务信息|
-|`GV$OB_SQL_AUDIT`|	SQL 统计信息|
-|`GV$SQL_PLAN_MONITOR`|	SQL 算子级统计信息|
-|`GV$OB_PLAN_CACHE_STAT`|	Plan Cache 统计信息|
-|`GV$OB_PLAN_CACHE_PLAN_STAT`|	执行计划统计信息|
-|`GV$OB_PLAN_CACHE_PLAN_EXPLAIN`|	执行计划详细信息|	
-|`GV$OB_SERVERS`|	节点的信息|
-|`GV$OB_UNITS`|	Unit 的信息|
-|`GV$OB_PARAMETERS`|	配置项信息|
-|`GV$OB_KVCACHE`|	KVCache 信息|
-|`GV$OB_SSTABLES`|	SSTable 信息|
-|`GV$OB_MEMSTORE`|	MemStore 信息|
-|`GV$OB_LOG_STAT`|	日志流的信息|
+|`GV$SYSSTAT`|	系统统计信息。|
+|`GV$SYSTEM_EVENT`|	租户级等待事件统计。|
+|`GV$SESSION_EVENT`|会话级等待事件统计。|
+|`GV$LATCH`|锁统计信息。|
+|`GV$OB_MEMORY`|	内存信息。|
+|`GV$OB_PROCESSLIST`|	会话信息。|
+|`GV$OB_TRANSACTION_PARTICIPANTS`|事务信息。|
+|`GV$OB_SQL_AUDIT`|	SQL 统计信息。|
+|`GV$SQL_PLAN_MONITOR`|	SQL 算子级统计信息。|
+|`GV$OB_PLAN_CACHE_STAT`|	Plan Cache 统计信息。|
+|`GV$OB_PLAN_CACHE_PLAN_STAT`|	执行计划统计信息。|
+|`GV$OB_PLAN_CACHE_PLAN_EXPLAIN`|	执行计划详细信息。|	
+|`GV$OB_SERVERS`|	节点的信息。|
+|`GV$OB_UNITS`|	Unit 的信息。|
+|`GV$OB_PARAMETERS`|	配置项信息。|
+|`GV$OB_KVCACHE`|	KVCache 信息。|
+|`GV$OB_SSTABLES`|	SSTable 信息。|
+|`GV$OB_MEMSTORE`|	MemStore 信息。|
+|`GV$OB_LOG_STAT`|	日志流的信息。|
 
 ## 指标分类
 
