--- a/zh-CN/6.manage/7.monitor/2.monitor-items-introduction.md/1.system-monitor/2.monitor-items.md
+++ b/zh-CN/6.manage/7.monitor/2.monitor-items-introduction.md/1.system-monitor/2.monitor-items.md
@@ -4,19 +4,19 @@
 
 监控项的数据来源于 `GV$SYSSTAT` 视图，其主要字段介绍如下：
 
-* `CON_ID`：租户 ID
+* `CON_ID`：租户 ID。
 
-* `SVR_IP`：节点 IP
+* `SVR_IP`：节点 IP。
 
-* `CLASS`：监控项类别
+* `CLASS`：监控项类别。
 
-* `STAT_ID`：监控项 ID
+* `STAT_ID`：监控项 ID。
 
-* `NAME`：监控项名称
+* `NAME`：监控项名称。
 
-* `VALUE`：监控项值
+* `VALUE`：监控项值。
 
-* `VALUE_TYPE`：监控项值类型
+* `VALUE_TYPE`：监控项值类型。
 
 `CLASS` 描述了监控项类别，OceanBase 数据库 V4.0 主要包括以下 14 个大类，具体如下：
 
