--- a/zh-CN/6.manage/7.monitor/2.monitor-items-introduction.md/1.system-monitor/4.lock-events.md
+++ b/zh-CN/6.manage/7.monitor/2.monitor-items-introduction.md/1.system-monitor/4.lock-events.md
@@ -4,15 +4,15 @@
 
 锁的经典实现：调用者先尝试加锁，如果加不上，则进入 SPIN 过程，反复尝试加锁（避免过早放弃 CPU 而进入等待，对于短临界区非常有效），如果 SPIN 次数达到上限（称为 SPIN 上限）后，调用者仍然无法获得锁，则进入 WAIT 过程，将自己放入等待队列并让出 CPU。等待队列默认支持 FIFO，也可以支持其他优先级策略，例如读优先。
 
-OceanBase 数据库提供了独立视图来展示所有锁事件相关的监控信息，目前已有 100 多个锁事件。锁事件本质是等待事件的一种，所有的锁事件都属于同一类等待事件（WAIT_CLASS 为 CONCURRENCY），但是锁事件相比一般的等待事件，具有更多的监控信息。每个锁事件都对应一个临界区，调用者可以通过锁事件的 SPIN 次数和调用次数之比来识别一个热点临界区，并决定是否采取优化手段。一个设计良好的并发系统，锁事件的 SPIN 次数和调用次数之比应该越小越好。
+OceanBase 数据库提供了独立视图来展示所有锁事件相关的监控信息，目前已有 100 多个锁事件。锁事件本质是等待事件的一种，所有的锁事件都属于同一类等待事件（`WAIT_CLASS` 为 `CONCURRENCY`），但是锁事件相比一般的等待事件，具有更多的监控信息。每个锁事件都对应一个临界区，调用者可以通过锁事件的 SPIN 次数和调用次数之比来识别一个热点临界区，并决定是否采取优化手段。一个设计良好的并发系统，锁事件的 SPIN 次数和调用次数之比应该越小越好。
 
 |视图|展示内容|备注|
 |---|---|
-|`GV$SYSTEM_EVENT`|租户级锁事件统计|`where WAIT_CLASS='CONCURRENCY' and event like 'latch:%'`|
-|`GV$SESSION_EVENT`|会话级锁事件统计|`where WAIT_CLASS='CONCURRENCY' and event like 'latch:%'`|
-|`GV$SESSION_WAIT`|会话级锁事件明细|`where WAIT_CLASS='CONCURRENCY' and event like 'latch:%'`|
-|`GV$SESSION_WAIT_HISTORY`|会话级锁事件明细历史|`where event like 'latch:%'`|
-|`GV$LATCH`|锁调用统计||	
+|`GV$SYSTEM_EVENT`|租户级锁事件统计。|`where WAIT_CLASS='CONCURRENCY' and event like 'latch:%'`|
+|`GV$SESSION_EVENT`|会话级锁事件统计。|`where WAIT_CLASS='CONCURRENCY' and event like 'latch:%'`|
+|`GV$SESSION_WAIT`|会话级锁事件明细。|`where WAIT_CLASS='CONCURRENCY' and event like 'latch:%'`|
+|`GV$SESSION_WAIT_HISTORY`|会话级锁事件明细历史。|`where event like 'latch:%'`|
+|`GV$LATCH`|锁调用统计。||	
 
 锁事件本质上也是一种等待事件，所以上文介绍的等待事件相关的视图（主要包括等待统计和等待明细）也适用于锁事件，在查询条件中加上 `where event like 'latch:%'` 即可。例如查询租户级别的锁等待事件：
 
