--- a/zh-CN/6.manage/7.monitor/2.monitor-items-introduction.md/3.sql-monitor/3.execution-plan.md
+++ b/zh-CN/6.manage/7.monitor/2.monitor-items-introduction.md/3.sql-monitor/3.execution-plan.md
@@ -12,15 +12,15 @@ Plan Cache 相关视图包含 Plan Cache 的统计信息、执行统计的统计
 
 `GV$OB_PLAN_CACHE_PLAN_EXPLAIN` 视图记录了执行计划的详细信息，其主要字段介绍如下：
 
-* `TENANT_ID`：租户 ID
-* `SVR_IP`：节点 IP
-* `PLAN_ID`：执行计划 ID
-* `PLAN_DEPTH`：Operator 的深度
-* `OPERATOR`：Operator 的名称
-* `NAME`：Operator 对应的表名
-* `ROWS`：预估的结果行数
-* `COST`：预估的代价
-* `PROPERTY`：Operator 的详细信息
+* `TENANT_ID`：租户 ID。
+* `SVR_IP`：节点 IP。
+* `PLAN_ID`：执行计划 ID。
+* `PLAN_DEPTH`：Operator 的深度。
+* `OPERATOR`：Operator 的名称。
+* `NAME`：Operator 对应的表名。
+* `ROWS`：预估的结果行数。
+* `COST`：预估的代价。
+* `PROPERTY`：Operator 的详细信息。
 
 <main id="notice" type='notice'>
     <h4>注意</h4>
