--- a/zh-CN/9.release-notes/101.enterprise-edition-history-release/101.V3.2/95.ob-324.md
+++ b/zh-CN/9.release-notes/101.enterprise-edition-history-release/101.V3.2/95.ob-324.md
@@ -27,14 +27,13 @@
 
 #### MySQL 兼容
 
-* 支持地理信息系统（GIS）
+- 支持地理信息系统（GIS）
 
     空间信息系统（GIS） 提供了对空间对象(点、线、面以及复杂的空间对象)的存储、计算、索引能力，在交通出行行业有着广泛的应用，可以帮助用户快速构建空间计算能力。OceanBase V3.2.4 版本开始支持 GIS，OceanBase 的 GIS 设计选择了基于四叉树空间划分的索引方案，支持兼容MySQL 8.0的 GIS 数据类型，支持 SRS（空间参考坐标系）元数据的管理及缓存，支持基于 QuadTree 的空间索引 ，支持单值类型（GEOMETRY/POINT/LINESTRING/POLYGON）和多值类型 (MULTIPOINT/MULTILINESTRING/MULTIPOLYGON/GEOMETRYCOLLECTION) ，并实现MySQL 8.0 常用的空间计算函数。更多信息，请参见 [空间计算函数](https://www.oceanbase.com/docs/enterprise-oceanbase-database-cn-10000000000948011)。
 
 - 兼容 MySQL Binlog 解析
 
     OB-CDC 数据同步解决方案支持兼容 MySQL Binlog 能力，支持主流应用（CANAL，DEBEZIUM，FLINK-CDC）从 OceanBase 进行 Binlog 生成和解析。对于 OBServer 节点需要兼容支持 Binlog 相关系统变量，例如 binlog_format，binlog_row_image，log_bin 和 server_uuid 等，同时新增支持对 REPLICATION SLAVE 和 REPLICATION CLIENT 权限设置。OB-CDC 将 OceanBase 的 CLOG 日志解析生成为 Binlog 兼容日志供下游产品订阅消费。更多信息，请参见 [binlog_row_image](https://www.oceanbase.com/docs/enterprise-oceanbase-database-cn-10000000000946273)。
-
 
 - 新增系统包 DBMS_RESOURCE_MANAGER
 
@@ -48,9 +47,9 @@
 
 - 系统包函数补充完善
 
-   * 支持系统包函数 DBMS_SESSION.SET_CONTEXT，设置或重置上下文属性的值。
-   * 支持系统包函数 DBMS_SESSION.CLEAR_CONTEXT，清除指定的上下文信息。
-   * 支持系统包函数 UTL_RAW.CAST_TO_BINARY_INTEGER，将以 RAW 二进制形式表示的 BINARY_INTEGER 值转换为 BINARY_INTEGER。
+  - 支持系统包函数 DBMS_SESSION.SET_CONTEXT，设置或重置上下文属性的值。
+  - 支持系统包函数 DBMS_SESSION.CLEAR_CONTEXT，清除指定的上下文信息。
+  - 支持系统包函数 UTL_RAW.CAST_TO_BINARY_INTEGER，将以 RAW 二进制形式表示的 BINARY_INTEGER 值转换为 BINARY_INTEGER。
 
 ### 内核增强
 
@@ -64,56 +63,49 @@
 
     随着更多的通信网络和终端设备厂商支持 IPv6 通信协议，IPv6 在客户项目上的应用日益广泛。OceanBase V3.2.4 版本及相关产品组件（obproxy、JDBC 等）均已支持 IPv6 协议。OceanBase 集群可以同时支持 IPv4 和 IPv6 网络接口的 TCP/IP 连接，在使用 IPv6 协议前请确保服务器操作系统必须被配置支持 IPv6。更多信息，请参见[IS_IPV6](https://www.oceanbase.com/docs/enterprise-oceanbase-database-cn-10000000000947754)。
 
-
 - 支持备份到 OBS
 
     备份恢复是 OceanBase 数据库高可用特性的核心组件， OceanBase 数据库已经支持 NFS、阿里云OSS 和 腾讯云 COS 三种备份介质。在OceanBase V3.2.4 版本中新增支持备份到华为云 OBS（对象存储服务器），通过配置备份目的端（backup_dest）将数据和日志文件备份存储到 OBS 上。  更多信息，请参见[备份前准备](https://www.oceanbase.com/docs/enterprise-oceanbase-database-cn-10000000000945704)。
 
-* 日志优化
+- 日志优化
 OceanBase V3.2.4 版本对日志输出进行了系统性分析和优化调整， 主要包括：
 
-    * 日志级别定义：增加 DIAG 诊断日志级别，将无需用户感知的 WARN, ERROR 归到 DIAG 日志。对需要保留面向运维的预警/报错日志，进行日志级别分类调整，如下：
-    
-        | 日志级别 | 面向对象 | 定义 | 原日志级别 |
-        | --- | --- | --- | --- |
-        | ERROR | DBA/用户 | OBServer 节点不能提供正常服务的异常，如磁盘满监听端口被占用等。也可能是产品后台的内部检查报错，例如 4377 (dml defensive check error), 4103 (data checksum error)等，需人工干预恢复 |  |
-        | WARN | DBA/用户 | 出现非预期场景，OBServer 节点能提供服务，但行为可能不符合预期，例如写入限流告警 |  |
+  - 日志级别定义：增加 DIAG 诊断日志级别，将无需用户感知的 WARN, ERROR 归到 DIAG 日志。对需要保留面向运维的预警/报错日志，进行日志级别分类调整，如下：
 
-        | INFO | DBA/用户 | 系统状态变化信息 | INFO |
-        | EDIAG | 研发 | Error Diagnosis, 协助故障排查的诊断信息，非预期的逻辑错误，如函数参数不符合预期等 | ERROR |
-        | WDIAG | 研发 | Warning Diagnosis, 协助故障排查的诊断信息，预期内的错误，如函数返回失败 | WARN |
-        | TRACE | 研发 | 任务级调试信息 | TRACE |
-        | DEBUG | 研发 | 详细调试信息 | DEBUG |
+    | 日志级别 | 面向对象 | 定义 | 原日志级别 |
+    | ------ | ------ | ------ | ------ |
+    | ERROR | DBA/用户 | OBServer 节点不能提供正常服务的异常，如磁盘满监听端口被占用等。也可能是产品后台的内部检查报错，例如 4377 (dml defensive check error), 4103 (data checksum error)等，需人工干预恢复 | - |
+    | WARN | DBA/用户 | 出现非预期场景，OBServer 节点能提供服务，但行为可能不符合预期，例如写入限流告警 | - |
+    | INFO | DBA/用户 | 系统状态变化信息 | INFO |
+    | EDIAG | 研发 | Error Diagnosis, 协助故障排查的诊断信息，非预期的逻辑错误，如函数参数不符合预期等 | ERROR |
+    | WDIAG | 研发 | Warning Diagnosis, 协助故障排查的诊断信息，预期内的错误，如函数返回失败 | WARN |
+    | TRACE | 研发 | 任务级调试信息 | TRACE |
+    | DEBUG | 研发 | 详细调试信息 | DEBUG |
 
-   - 错误码关联：分类错误消息并完善对应的错误码。为用户的每一条告警、错误定义响应的错误码，用户可根据错误码检索文档寻找解决方法。
+  - 错误码关联：分类错误消息并完善对应的错误码。为用户的每一条告警、错误定义响应的错误码，用户可根据错误码检索文档寻找解决方法。
 
-   - 按错误码限流：针对 WDIAG 级别日志按错误码进行限流，被限流日志仅输出错误码及限流日志数。增加 `diag_syslog_per_error_limit` 配置项用于控制此限流功能，默认单个错误 200 条 DIAG 日志每秒。
+  - 按错误码限流：针对 WDIAG 级别日志按错误码进行限流，被限流日志仅输出错误码及限流日志数。增加 `diag_syslog_per_error_limit` 配置项用于控制此限流功能，默认单个错误 200 条 DIAG 日志每秒。
 
-   - 监控日志移除：日志中定时打印的 `dump tenant info`, `memory info`, `easy stat` 等移出日志文件单独管理。
+  - 监控日志移除：日志中定时打印的 `dump tenant info`, `memory info`, `easy stat` 等移出日志文件单独管理。
 
-   - 日志文件自描述：在日志文件头部增加记录机器地址、机型信息 CPU 类型、OS 版本、OBServer 节点版本和 TimeZone 信息等。
+  - 日志文件自描述：在日志文件头部增加记录机器地址、机型信息 CPU 类型、OS 版本、OBServer 节点版本和 TimeZone 信息等。
 
-* 其它功能增强
+- 其它功能增强
 
-    * 支持配置事务大小，参见配置项 `_max_trx_size`。
-    * 支持配置登录线程数量，参见配置项 `sql_login_thread_count`。
-    * 支持表级并行 Hint 设置，例如 `select /*+ parallel(t1, 8) */ from t1；`。
+  - 支持配置事务大小，参见配置项 `_max_trx_size`。
+  - 支持配置登录线程数量，参见配置项 `sql_login_thread_count`。
+  - 支持表级并行 Hint 设置，例如 `select /*+ parallel(t1, 8) */ from t1；`。
 
 ## 兼容性变更
 
 ### 配置项
 
 | 配置项 | 修改类型 | 默认值 | 新默认值 | 描述 |
-| --- | --- | --- | --- | --- |
-| enable_cgroup | 新增 | 
- | True | 是否开启 cgroup 功能。 |
-| sql_login_thread_count | 新增 | 
- | 0 | 登录请求处理线程的数量。默认值 0 表示动态调整。 |
-| ob_query_switch_leader_retry_timeout | 新增 | 
- | 0us | 失败 Query 的最长重试时间。默认值 0us 表示关闭重试超时检查功能。 |
-| diag_syslog_per_error_limit | 新增 | 
- | 200 | 每秒钟每个错误码的诊断日志数量限制 |
-
+| ------ | ------ | ------ | ------ | ------ |
+| enable_cgroup | 新增 | - | True | 是否开启 cgroup 功能。 |
+| sql_login_thread_count | 新增 |- | 0 | 登录请求处理线程的数量。默认值 0 表示动态调整。 |
+| ob_query_switch_leader_retry_timeout | 新增 |- | 0us | 失败 Query 的最长重试时间。默认值 0us 表示关闭重试超时检查功能。 |
+| diag_syslog_per_error_limit | 新增 |- | 200 | 每秒钟每个错误码的诊断日志数量限制 |
 | ob_esi_syslog_level | 修改 | INFO | WDIAG | 存储独立子进程日志级别 |
 | syslog_level | 修改 | INFO | WDIAG | 系统日志级别 |
 
@@ -121,7 +113,7 @@ OceanBase V3.2.4 版本对日志输出进行了系统性分析和优化调整，
 
 | 配置项 | 修改类型 | 建议值 | 描述 |
 | --- | --- | --- | --- |
-| binlog_format | 新增 | ROW | 兼容 binlog 的日志格式，当 log_bin 系统变量设置为ON时生效 |
+| binlog_format | 新增 | ROW | 兼容 binlog 的日志格式，当 log_bin 系统变量设置为 ON 时生效 |
 | binlog_checksum | 新增 | CRC32 | 兼容 binlog 的校验和 |
 | binlog_rows_query_log_events | 新增 | OFF | 兼容 binlog 的行查询日志事件记录，适用于 ROW 日志格式 |
 | log_bin | 新增 | ON | 兼容 binlog 的启用状态 |
@@ -129,26 +121,25 @@ OceanBase V3.2.4 版本对日志输出进行了系统性分析和优化调整，
 
 ### 行为变更
 
-* OceanBase V3.2.4 版本启用新的系统日志级别，与早期版本系统日志差异如下：
-    * 日志优先级从高到低依次是 "ERROR", "WARN", "INFO", "EDIAG", "WDIAG", "TRACE", "DEBUG"。
+- OceanBase V3.2.4 版本启用新的系统日志级别，与早期版本系统日志差异如下：
+  - 日志优先级从高到低依次是 "ERROR", "WARN", "INFO", "EDIAG", "WDIAG", "TRACE", "DEBUG"。
 
-   * 早期版本 WARN 级别的日志升级到 V3.2.4 版本后变更为 WDIAG 级别。因此对应早期版本 WARN 级别日志，升级到 V3.2.4 版本后转换为 ERROR 级别日志输出。
+  - 早期版本 WARN 级别的日志升级到 V3.2.4 版本后变更为 WDIAG 级别。因此对应早期版本 WARN 级别日志，升级到 V3.2.4 版本后转换为 ERROR 级别日志输出。
 
 ## 升级路径
 
-* 支持从 V3.2.1、V3.2.2 、V3.2.3 升级到 V3.2.4，但 V3.2.3 BP6 及后续版本不支持升级到 V3.2.4。
+- 支持从 V3.2.1、V3.2.2 、V3.2.3 升级到 V3.2.4，但 V3.2.3 BP6 及后续版本不支持升级到 V3.2.4。
 
-* 支持从 V3.1.2 升级到 V3.2.4, 需要手工下载并上传 V3.2.0、V3.2.1 、V3.2.2 和 V3.2.3 的软件包到 OCP。
-* 支持从 V2.2.77 升级，需要先升级到 V3.1.2，然后再升级到 V3.2.4。
+- 支持从 V3.1.2 升级到 V3.2.4, 需要手工下载并上传 V3.2.0、V3.2.1 、V3.2.2 和 V3.2.3 的软件包到 OCP。
+- 支持从 V2.2.77 升级，需要先升级到 V3.1.2，然后再升级到 V3.2.4。
 
 ## 周边配套
 
 OceanBase 数据库 V3.2.4 推荐使用的平台工具版本如下。
 
 | 组件 | 配套版本 |
-| --- | --- |
+| ------ | ------ |
 | obproxy | V3.2.8 |
-
 | OCP | V3.3.4 |
 | ODC | V4.0.0 |
 | OMS | V3.4.0 |
@@ -159,4 +150,4 @@ OceanBase 数据库 V3.2.4 推荐使用的平台工具版本如下。
 
 ## 注意事项
 
-* 配置项 `open_cursors` 的默认值为 50，表示单个 SESSION 上最大可以打开的 cursor 数量。V3.2.4 版本优化限制了单个 SESSION 上最大可以打开的 Prepare Statement 数量，因此在业务选择升级到 V3.2.4 版本时需要评估是否将配置项 `open_cursors` 调大，避免业务 SQL 执行 Prepare Statement 报错。
+配置项 `open_cursors` 的默认值为 50，表示单个 SESSION 上最大可以打开的 cursor 数量。V3.2.4 版本优化限制了单个 SESSION 上最大可以打开的 Prepare Statement 数量，因此在业务选择升级到 V3.2.4 版本时需要评估是否将配置项 `open_cursors` 调大，避免业务 SQL 执行 Prepare Statement 报错。
