--- a/zh-CN/6.manage/5.security-and-permissions/2.identification-and-authentication/2.identification-and-authentication-of-oracle-mode/3.login-failure-handling-of-oracle-mode.md
+++ b/zh-CN/6.manage/5.security-and-permissions/2.identification-and-authentication/2.identification-and-authentication-of-oracle-mode/3.login-failure-handling-of-oracle-mode.md
@@ -172,7 +172,7 @@ Profile 文件对密码提供了两个参数来实现连续登录失败后锁定
 
    <main id="notice" type='notice'>
     <h4>注意</h4>
-    <p>解锁用户的操作一般由管理员完成，普通用户如果需要执行锁定和解锁操作，必须具备全局的 <code>ALTER USER</code> 权限。关于查看用户权限和授权的相关操作，参见 <a href="../2.oracle-3/4.view-user-permissions.md">查看用户权限</a> 和<a href="../2.oracle-3/5.modify-user-permissions-1.md">修改用户权限</a>
+    <p>解锁用户的操作一般由管理员完成，普通用户如果需要执行锁定和解锁操作，必须具备全局的 <code>ALTER USER</code> 权限。关于查看用户权限和授权的相关操作，参见 <a href="../2.oracle-3/4.view-user-permissions.md">查看用户权限</a> 和<a href="../2.oracle-3/5.modify-user-permissions-1.md">修改用户权限</a>。</p>
     </main>
 
    ```shell
@@ -183,7 +183,7 @@ Profile 文件对密码提供了两个参数来实现连续登录失败后锁定
 
 对于已经创建好的 Profile 可以通过 `ALTER PROFILE` 语句进行修改。
 
-更多 `ALTER PROFILE` 语句的详细信息，参见 [ALTER PROFILE](../../../../7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/4.alter-profile-of-oracle-mode.md)
+更多 `ALTER PROFILE` 语句的详细信息，参见 [ALTER PROFILE](../../../../7.reference/4.development-reference/1.sql-syntax/3.common-tenant-of-oracle-mode/9.sql-statement-of-oracle-mode/1.ddl-of-oracle-mode/4.alter-profile-of-oracle-mode.md)。
 
 <main id="notice" type='notice'>
     <h4>注意</h4>
