--- a/zh-CN/7.reference/2.administrator-guide/7.management/3.daily-inspection/10.obproxy-connection-status.md
+++ b/zh-CN/7.reference/2.administrator-guide/7.management/3.daily-inspection/10.obproxy-connection-status.md
@@ -15,9 +15,11 @@
 
 3. 在显示的页面的左侧导航栏上，单击 **健康巡检** 。
 
-4. 在 **健康巡检列表** 中，可查看 OBProxy 连接状态。![aaa](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/4935672461/p374206.png)
+4. 在 **健康巡检列表** 中，可查看 OBProxy 连接状态。
 
-|     巡检项     |                                                                                                                        巡检子项                                                                                                                         |                                                                                                                   结果示例                                                                                                                    |
-|-------------|-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
-| OBProxy 状态  | status：运行状态                                                                                                                                                                                                                                         | *OBProxy: 10.0.0.0 状态：不可用(UNAVAILABLE)，不通过    <!-- -->* OBProxy: 10.0.0.0 状态：重启中(RESTARTING)，不通过    |
-| OBProxy 连接数 | *`session_count from client`OBProxy 和客户端之间的连接数    <!-- -->* `max connection count for a single obproxy` 单个 OBProxy 的最大连接数    | *OBProxy：10.0.0.0 客户端连接数：8000，不通过    <!-- -->* OBProxy: 10.0.0.0 总连接数：58000，不通过                     |
+   ![aaa](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/4935672461/p374206.png)
+
+   |     巡检项     |                                                                                                                        巡检子项                                                                                                                         |                                                                                                                   结果示例                                                                                                                    |
+   |-------------|-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
+   | OBProxy 状态  | status：运行状态                                                                                                                                                                                                                                         | *OBProxy: 10.0.0.0 状态：不可用(UNAVAILABLE)，不通过    <!-- -->* OBProxy: 10.0.0.0 状态：重启中(RESTARTING)，不通过    |
+   | OBProxy 连接数 | *`session_count from client`OBProxy 和客户端之间的连接数    <!-- -->* `max connection count for a single obproxy` 单个 OBProxy 的最大连接数    | *OBProxy：10.0.0.0 客户端连接数：8000，不通过    <!-- -->* OBProxy: 10.0.0.0 总连接数：58000，不通过                     |
