--- a/zh-CN/7.reference/2.administrator-guide/7.management/3.daily-inspection/4.check-host-status.md
+++ b/zh-CN/7.reference/2.administrator-guide/7.management/3.daily-inspection/4.check-host-status.md
@@ -10,7 +10,7 @@
 
 3. 在主机页面，单击要查看的主机 IP 地址，进入主机详情页面。
 
-![host1](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/6835672461/p374118.png)
+   ![host1](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/6835672461/p374118.png)
 
 ### 方式二
 
@@ -26,9 +26,9 @@
 
 4. 在 **健康巡检** \> **巡检结果列表** 中，查看主机状态。
 
-![２－３健康巡检](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/8441779261/p303495.png)
+    ![２－３健康巡检](https://help-static-aliyun-doc.aliyuncs.com/assets/img/zh-CN/8441779261/p303495.png)
 
-配置功能项如下表所示：
+    配置功能项如下表所示：
 
    | **参数** |                          **说明**                           |
    |--------|-----------------------------------------------------------|
@@ -38,7 +38,7 @@
    | 巡检结果描述 | 对主机、集群、OBProxy、zone、OBServer 等情况进行描述。                     |
    | 巡检时间   | 显示巡检发起时的时间，例如 2020 年 11 月 27日 17:04:00。                   |
 
-   据 **巡检指标** 可查看主机指标的健康状态。相关详情如下所示。
+   根据 **巡检指标** 可查看主机指标的健康状态。相关详情如下所示。
 
    | 指标项  |                **巡检指标**                 |                                       **子指标项**                                        |                                                 **巡检结果示例**                                                  |
    |------|-----------------------------------------|---------------------------------------------------------------------------------------|-------------------------------------------------------------------------------------------------------------|
