--- a/zh-CN/6.manage/8.logging/1.logging-overview.md
+++ b/zh-CN/6.manage/8.logging/1.logging-overview.md
@@ -28,7 +28,7 @@ OceanBase 数据库日志模块所属的日志文件分为 `observer.log`、`ele
 |选举模块日志（`election.log`、`election.log.wf`）|OBServer 服务器的 `$work_dir/log` 目录下。|
 |Root Service 日志（`rootservice.log`、`rootservice.log.wf`）|OBServer 服务器的 `$work_dir/log` 目录下。|
 
-OceanBase 数据库的单个日志文件大小不超过 256MB，当日志文件大小达到 256MB 时，系统会进行日志轮转。原日志文件追加时间为后缀（格式为 `yyyyMMddHHmmss`），时间为本日志文件中最后一条日志的生成时间，并生成新的日志文件。发生日志轮转时，`.wf` 日志文件即使没到 256MB 也会一起轮转。
+OceanBase 数据库的单个日志文件大小不超过 256MB，当日志文件大小达到 256MB 时，系统会进行日志轮转。原日志文件追加时间为后缀（格式为 `yyyyMMddHHmmss`），时间为本日志文件中最后一条日志的生成时间，并生成新的日志文件。发生日志轮转时，`.wf` 日志文件即使没到 256MB 也会一起轮转。也就是说 `xxx.log.wf` 文件和 `xxx.log` 文件总是一一对应的，`.wf` 文件一般情况下远小于 256M。
 
 典型日志文件目录如下：
 
