--- a/zh-CN/3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/10.connect-to-the-oceanbase-database-through-spring-jdbc-of-mysql-mode.md
+++ b/zh-CN/3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/10.connect-to-the-oceanbase-database-through-spring-jdbc-of-mysql-mode.md
@@ -6,14 +6,14 @@
 
 ```xml
 <dependency>
-   <groupId>com.alipay.oceanbase</groupId>
-   <artifactId>oceanbase-client</artifactId>
-   <version>3.2.3</version>
+    <groupId>com.oceanbase</groupId>
+    <artifactId>oceanbase-client</artifactId>
+    <version>2.4.0</version>
 </dependency>
 <dependency>
-   <groupId>org.springframework</groupId>
-   <artifactId>spring-jdbc</artifactId>
-   <version>5.0.9.RELEASE</version>
+    <groupId>org.springframework</groupId>
+    <artifactId>spring-jdbc</artifactId>
+    <version>5.0.9.RELEASE</version>
 </dependency>
 ```
 
