--- a/zh-CN/3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/9.connect-to-the-oceanbase-database-through-spring-batch-of-mysql-mode.md
+++ b/zh-CN/3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/9.connect-to-the-oceanbase-database-through-spring-batch-of-mysql-mode.md
@@ -14,25 +14,19 @@
 
 ```xml
   <dependency>
-   <groupId>org.springframework.boot</groupId>
-   <artifactId>spring-boot-starter-batch</artifactId>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-batch</artifactId>
   </dependency>
   <!--数据库驱动-->
   <dependency>
-   <groupId>com.alipay.oceanbase</groupId>
-   <artifactId>oceanbase-client</artifactId>
-   <version>3.2.3</version>
-  </dependency>
-  <!--连接池-->
-  <dependency>
-   <groupId>com.alibaba</groupId>
-   <artifactId>druid</artifactId>
-   <version>1.1.22</version>
+      <groupId>com.oceanbase</groupId>
+      <artifactId>oceanbase-client</artifactId>
+      <version>2.4.0</version>
   </dependency>
   <!--基于实体类自动建表-->
   <dependency>
-   <groupId>org.springframework.boot</groupId>
-   <artifactId>spring-boot-starter-data-jpa</artifactId>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-data-jpa</artifactId>
   </dependency>
 
   <!--spring-boot核心等其他依赖省略。。。。-->
