--- a/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/3.manage-resources/3.management-resource-unit/3.delete-a-resource-unit.md
+++ b/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/3.manage-resources/3.management-resource-unit/3.delete-a-resource-unit.md
@@ -28,7 +28,7 @@
   
   根据查询结果，如果查询结果的 `name` 列中无该资源单元名称，则表示该资源单元未被指定给资源池；如果查询结果的 `name` 列中有该资源单元名称，则表示资源单元已被指定给资源池。
 
-## 删除资源单元
+## 操作步骤
 
 * 对于资源单元未被使用的场景
 
@@ -39,8 +39,8 @@
   ```
 
   <main id="notice" type='notice'>
-    <h4>注意</h4>
-    <p>使用 <code>DROP RESOURCE UNIT</code> 语句删除资源单元时，仅支持删除单个资源单元，不支持批量删除多个资源单元。</p>
+  <h4>注意</h4>
+  <p>使用 <code>DROP RESOURCE UNIT</code> 语句删除资源单元时，仅支持删除单个资源单元，不支持批量删除多个资源单元。</p>
   </main>
   
 * 对于资源单元正在被使用的场景
