--- a/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/3.manage-resources/5.manage-resource-pools/5.resource-pool-splitting.md
+++ b/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/3.manage-resources/5.manage-resource-pools/5.resource-pool-splitting.md
@@ -2,6 +2,12 @@
 
 在日常使用中，为了对资源进行充分的利用，您可以将租户的一个多 Zone 资源池分裂为多个单 Zone 资源池后，再为每个 Zone 重新配置各自的资源配置。
 
+## 使用限制
+
+仅 `sys` 租户可以执行分裂资源池操作。
+
+## 示例背景
+
 在日常使用场景中，通常会创建如下资源池：
 
 ```sql
@@ -16,17 +22,20 @@ obclient>CREATE RESOURCE POOL pool1 UNIT='uc0', UNIT_NUM=1, ZONE_LIST=('z1','z2'
 ALTER RESOURCE POOL SPLIT INTO ('pool_name' [, 'pool_name' ...]) ON ('zone' [, 'zone' ...])
 ```
 
-该语句仅支持由 `sys` 租户的管理员执行。
-分裂完成后，分裂出来的资源池的默认资源配置仍然为原资源配置，您可以根据各 Zone 的资源使用情况自行调整各新资源池的资源配置。
+## 示例操作
 
-示例：将资源池 `pool1` 分裂为 `pool10`、`pool11` 和 `pool12`，并为新的资源池指定新的资源单元配置。
+1. 使用 `root` 用户登录集群的 `sys` 租户。
 
-```sql
-obclient>ALTER RESOURCE POOL pool1 SPLIT INTO ('pool10','pool11','pool12') ON ('z1','z2','z3');
+2. 将资源池 `pool1` 分裂为 `pool10`、`pool11` 和 `pool12`，并为新的资源池指定新的资源单元配置。
 
-ALTER RESOURCE POOL pool10 UNIT='uc1';
+    ```shell
+    obclient>ALTER RESOURCE POOL pool1 SPLIT INTO ('pool10','pool11','pool12') ON ('z1','z2','z3');
 
-ALTER RESOURCE POOL pool11 UNIT='uc2';
+    ALTER RESOURCE POOL pool10 UNIT='uc1';
 
-ALTER RESOURCE POOL pool12 UNIT='uc3';
-```
+    ALTER RESOURCE POOL pool11 UNIT='uc2';
+
+    ALTER RESOURCE POOL pool12 UNIT='uc3';
+    ```
+
+   分裂完成后，分裂出来的资源池的默认资源配置仍然为原资源配置，您可以根据各 Zone 的资源使用情况自行调整各新资源池的资源配置。
