--- a/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/19.manage-tenant-variables.md
+++ b/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/19.manage-tenant-variables.md
@@ -118,7 +118,7 @@ obclient> SET @@foreign_key_checks = 1;
 
 以上两种方式的 Session 级别变量的设置是等效的。
 
-## 更多信息
+## 相关文档
 
 关于 OceanBase 数据库中变量的更多详细介绍信息请参见 [配置管理](../2.configuration-management/1.configuration-management-introduction.md)。
 
