--- a/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/2.create-a-tenant.md
+++ b/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/2.create-a-tenant.md
@@ -2,13 +2,20 @@
 
 您可以通过 SQL 语句新建租户。
 
-> **功能适用性**
->
-> OceanBase 数据库社区版仅提供 MySQL 模式。
+<main id="notice" type=''>
+<h4>功能适用性</h4>
+<p>OceanBase 数据库社区版仅提供 MySQL 模式。</p>
+</main>
 
-## 创建租户的语法
+## 使用限制
 
-OceanBase 数据库支持两种类型的租户： MySQL 和 Oracle。只有 `root` 用户连接到 `sys` 租户（`root@sys`）才能执行 `CREATE TENANT` 命令去创建租户。
+仅 `sys` 租户可以创建租户。
+
+## 新建租户
+
+OceanBase 数据库支持两种类型的租户： MySQL 和 Oracle。
+
+## 新建租户语句
 
 创建租户的 SQL 语法如下：
 
@@ -51,7 +58,7 @@ opt_set_sys_var:
 | ENABLE_ARBITRATION_SERVICE | 指定租户是否开启仲裁服务，如果不显示指定，默认创建的租户其仲裁服务为关闭状态。 如果创建租户的时候未开启仲裁服务，可以在创建租户后再开启仲裁服务，详细操作请参见 [开启仲裁服务](../../../../6.manage/4.high-availability/4.arbitration-high-availability/2.enable-the-arbitration-service.md)。
 | system_var_name          | 可选，指定租户的系统变量值，其中： <ul><li>变量 `ob_compatibility_mode` 用于指定租户的兼容模式，可选择 MySQL 或 Oracle 模式，并且只能在创建时指定。如果不指定 `ob_compatibility_mode`，则默认兼容模式为 MySQL 模式。</li> <li>变量 `ob_tcp_invited_nodes` 用于指定租户连接的白名单，即允许哪些客户端 IP 连接该租户。如果不调整 `ob_tcp_invited_nodes` 的值，则默认租户的连接方式为只允许本机的 IP 连接数据库。 </br>您也可以待租户创建成功后再修改其白名单设置，修改白名单的具体操作请参见 [设置和查看租户白名单](10.configure-and-view-the-tenant-whitelist.md)。    </br>OceanBase 数据库中，租户可设置的系统变量请参见 [系统变量](../../../5.system-reference/2.system-variable-of-mysql-mode/1.overview-of-system-variables-of-mysql-mode.md)。             |
 
-## 使用示例
+### 新建租户示例
 
 * 创建名为 `test_tenant` 的一个 2 副本并开启仲裁服务的 MySQL 租户（创建新租户默认是 MySQL 租户）。
 
@@ -110,7 +117,7 @@ opt_set_sys_var:
    1 row in set
    ```
 
-## 后续处理
+## 后续操作
 
 租户创建成功后，默认其管理员用户（MySQL 模式为 `root`，Oracle 模式为 `sys`）的密码为空，您可以使用 `obclient -h10.10.10.1 -P2883 -uusername@tenantname#clustername -p -A` 语句登录数据库后，修改管理员用户的密码。修改用户密码的操作请参见 [修改用户密码（Oracle 模式）](9.manage-users-and-permissions/2.oracle-mode/6.change-user-password-of-oracle-mode.md)和 [修改用户密码（MySQL 模式）](9.manage-users-and-permissions/3.mysql-mode/6.change-user-password-of-mysql-mode.md)。
 
