--- a/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/4.view-tenant-information.md
+++ b/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/4.view-tenant-information.md
@@ -93,50 +93,30 @@
 
 2. 执行以下语句，查看当前租户信息。
 
-   * 查看当前租户名。
+   示例如下：
 
-      ```sql
-      obclient> SHOW TENANT;
-      +---------------------+
-      | Current_tenant_name |
-      +---------------------+
-      | sys                 |
-      +---------------------+
-      1 row in set
-      ```
-
-   * 查看当前有效租户。
-
-      ```sql
-      obclient> SELECT effective_tenant();
-      +--------------------+
-      | effective_tenant() |
-      +--------------------+
-      | sys                |
-      +--------------------+
-      1 row in set
-      ```
-
-   * 查看当前租户的状态。
-
-      ```sql
-      obclient> SHOW TENANT STATUS;
-      +--------+------------+
-      | Tenant | Status     |
-      +--------+------------+
-      | sys    | read write |
-      +--------+------------+
-      1 row in set
-      ```
-
-   * 查看当前租户的 ID。
-
-      ```sql
-      obclient> SELECT effective_tenant_id();
-      +-----------------------+
-      | effective_tenant_id() |
-      +-----------------------+
-      |                     1 |
-      +-----------------------+
-      1 row in set
-      ```
+   ```shell
+   obclient [SYS]> SELECT * FROM DBA_OB_TENANTS;
+   *************************** 1. row ***************************
+            TENANT_ID: 1004
+          TENANT_NAME: oracle001
+          TENANT_TYPE: USER
+          CREATE_TIME: 13-MAR-23 10.23.07.538516 AM
+          MODIFY_TIME: 13-MAR-23 10.23.25.073040 AM
+         PRIMARY_ZONE: zone1
+             LOCALITY: FULL{1}@zone1
+    PREVIOUS_LOCALITY: NULL
+   COMPATIBILITY_MODE: ORACLE
+               STATUS: NORMAL
+        IN_RECYCLEBIN: NO
+               LOCKED: NO
+          TENANT_ROLE: PRIMARY
+    SWITCHOVER_STATUS: NORMAL
+     SWITCHOVER_EPOCH: 0
+             SYNC_SCN: 1679392361895209460
+       REPLAYABLE_SCN: 1679392361895209460
+         READABLE_SCN: 1679392361804500893
+   RECOVERY_UNTIL_SCN: 4611686018427387903
+             LOG_MODE: NOARCHIVELOG
+   1 row in set
+   ```
