--- a/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/3.manage-resources/3.management-resource-unit/2.modify-the-configuration-of-a-resource-unit.md
+++ b/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/3.manage-resources/3.management-resource-unit/2.modify-the-configuration-of-a-resource-unit.md
@@ -47,25 +47,31 @@ Sum(log_disk_size) <= LOG_DISK_CAPACITY;
 
 如果需要调小资源单元的配置，则需要保证修改后的 CPU、内存、日志盘容量等的资源总量大于或等于当前已经使用的日志盘空间。
 
-## 修改资源单元的配置
+## 使用限制
+
+仅 `sys` 租户可以修改资源单元配置。
+
+## 操作步骤
 
 修改资源单元配置时，可修改 CPU、内存、IOPS 及日志盘规格中的若干项，没有被修改的值将保持不变。
 
-修改资源单元的语句如下：
+1. 使用 `root` 用户登录集群的 `sys` 租户。
 
-```sql
-ALTER RESOURCE UNIT unitname 
-MAX_CPU [=] cpunum, 
-[MIN_CPU [=] cpunum,]
-MEMORY_SIZE [=] memsize, 
-[MAX_IOPS [=] iopsnum, MIN_IOPS [=] iopsnum,IOPS_WEIGHT [=]iopsweight,]
-[LOG_DISK_SIZE [=] logdisksize];
-```
+2. 修改资源单元配置。
 
-示例：
+   语句如下：
 
-使用 `root` 用户登录集群的 `sys` 租户后，修改资源单元 `unit1` 的配置。
+   ```sql
+   ALTER RESOURCE UNIT unitname 
+   MAX_CPU [=] cpunum, 
+   [MIN_CPU [=] cpunum,]
+   MEMORY_SIZE [=] memsize, 
+   [MAX_IOPS [=] iopsnum, MIN_IOPS [=] iopsnum,IOPS_WEIGHT [=]iopsweight,]
+   [LOG_DISK_SIZE [=] logdisksize];
+   ```
 
-```sql
-obclient> ALTER RESOURCE UNIT unit1 MAX_CPU 15, MEMORY_SIZE '20G', LOG_DISK_SIZE '4G';
-```
+   修改资源单元 `unit1` 的示例如下：
+
+   ```shell
+   obclient> ALTER RESOURCE UNIT unit1 MAX_CPU 15, MEMORY_SIZE '20G', LOG_DISK_SIZE '4G';
+   ```
