--- a/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/3.create-a-user-tenant.md
+++ b/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/3.create-a-user-tenant.md
@@ -2,7 +2,7 @@
 
 OceanBase 数据库面向多租户设计。 在一个大集群中，您可以创建很多租户，不同的部门使用不同的租户。租户和租户之间资源已经进行了隔离，保障了相互之间访问不受影响，类似于数据库中的实例。
 
-## 背景
+## 背景信息
 
 MySQL 是一个单租户的模式，所有用户在一套资源池下进行使用，这可能会导致一种故障。当用户负载非常高时，应用将用尽数据库的所有资源，导致数据库管理员无法连接数据库，也无法执行一些高优先级的控制命令。例如无法执行 kill 命令“杀死”超时的查询，或者一些管理平台也无法连接到数据库等。
 
