--- a/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/8.delete-a-tenant.md
+++ b/zh-CN/7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/8.delete-a-tenant.md
@@ -2,57 +2,64 @@
 
 您可以通过 SQL 语句删除租户。
 
-## 通过 SQL 语句删除租户
+## 注意事项
 
-删除租户后，租户下的数据库和表也同时被删除。但是租户使用的资源配置不会被删除。资源配置可以继续给其他租户使用。
+删除租户会同时删除该租户下的数据库和表，请谨慎操作。
 
-<main id="notice" type='notice'>
-<h4>注意</h4>
-<p>只有系统管理员（<code>sys</code> 租户的 <code>root</code> 用户）才能执行 <code>DROP TENANT</code> 命令。</p>
-</main>
+## 使用限制
 
-删除租户的语法 SQL 语句如下：
+仅 `sys` 租户可以删除租户。
 
-```sql
-obclient> DROP TENANT tenant_name [FORCE]
-```
+## 操作步骤
 
-或者
+1. 使用 `root` 用户登录集群的 `sys` 租户。
 
-```sql
-obclient> DROP TENANT tenant_name PURGE; 
-```
+2. 执行以下语句，删除租户。
 
-其中：
+    删除租户的语句如下：
 
-* 对于 `DROP TENANT` 操作：
+    ```sql
+    obclient> DROP TENANT tenant_name [FORCE]
+    ```
 
-  * 当系统租户开启回收站功能时，`DROP TENANT` 操作表示删除的租户会进入回收站。对于回收站中的租户，后续系统租户可以通过回收站功能进一步删除或恢复该租户。有关回收站相关操作，参见 [回收站](../../../../6.manage/4.high-availability/5.recyclebin-management/1.recyclebin-overview.md)。
+    或者
 
-  * 当系统租户关闭回收站功能时，`DROP TENANT` 操作表示延迟删除租户，后台线程会进行 GC（Garbage Collection）动作，租户的信息仍然可以通过内部表查询。租户具体延迟删除的时间由配置项 `schema_history_expire_time` 控制，默认为 7 天，表示执行 `DROP TENANT` 7 天后，租户会被删除，租户下的数据库和表也同时被删除。
+    ```sql
+    obclient> DROP TENANT tenant_name PURGE; 
+    ```
 
-    `schema_history_expire_time` 配置项更多信息请参见 [schema_history_expire_time](../../../5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items/180.schema_history_expire_time.md)。
+    其中：
 
-* `DROP TENANT PURGE` 操作表示仅延迟删除租户，且无论系统租户是否开启回收站功能，删除的租户均不进入回收站。
+    * 对于 `DROP TENANT` 操作：
 
-* `FORCE` 参数表示无论系统租户是否开启回收站功能，均可以立刻删除租户。
+      * 当系统租户开启回收站功能时，`DROP TENANT` 操作表示删除的租户会进入回收站。对于回收站中的租户，后续系统租户可以通过回收站功能进一步删除或恢复该租户。有关回收站相关操作，参见 [回收站](../../../../6.manage/4.high-availability/5.recyclebin-management/1.recyclebin-overview.md)。
 
-示例：
+      * 当系统租户关闭回收站功能时，`DROP TENANT` 操作表示延迟删除租户，后台线程会进行 GC（Garbage Collection）动作，租户的信息仍然可以通过内部表查询。租户具体延迟删除的时间由配置项 `schema_history_expire_time` 控制，默认为 7 天，表示执行 `DROP TENANT` 7 天后，租户会被删除，租户下的数据库和表也同时被删除。
 
-* 系统租户开启回收站功能后，删除租户 `t1`，删除的租户可进入回收站。系统租户关闭回收站功能时，删除租户 `t1`，租户被延迟删除。
+        `schema_history_expire_time` 配置项更多信息请参见 [schema_history_expire_time](../../../5.system-reference/1.system-configuration-items/3.cluster-level-configuration-items/180.schema_history_expire_time.md)。
 
-  ```sql
-  obclient> DROP TENANT t1;
-  ```
+    * `DROP TENANT PURGE` 操作表示仅延迟删除租户，且无论系统租户是否开启回收站功能，删除的租户均不进入回收站。
 
-* 延迟删除租户 `t1`，删除的租户不进入回收站。
+    * `FORCE` 参数表示无论系统租户是否开启回收站功能，均可以立刻删除租户。
 
-  ```sql
-  obclient> DROP TENANT t1 PURGE;
-  ```
+    示例：
 
-* 立刻删除租户 `t1`。
+    * 系统租户开启回收站功能后，删除租户 `t1`，删除的租户可进入回收站。系统租户关闭回收站功能时，删除租户 `t1`，租户被延迟删除。
 
-  ```sql
-  obclient> DROP TENANT t1 FORCE;
-  ```
+      ```sql
+      obclient> DROP TENANT t1;
+      ```
+
+    * 延迟删除租户 `t1`，删除的租户不进入回收站。
+
+      ```sql
+      obclient> DROP TENANT t1 PURGE;
+      ```
+
+    * 立刻删除租户 `t1`。
+
+      ```sql
+      obclient> DROP TENANT t1 FORCE;
+      ```
+
+    删除租户后，租户下的数据库和表也同时被删除。但是租户使用的资源配置不会被删除。资源配置可以继续给其他租户使用。
