修改部署所需配置文件和部署截图

--- a/zh-CN/4.deploy/5.deploy-oceanbase-database-community-edition/2.local-deployment/3.deploy-OceanBase-database-of-multi-node-cluster.md
+++ b/zh-CN/4.deploy/5.deploy-oceanbase-database-community-edition/2.local-deployment/3.deploy-OceanBase-database-of-multi-node-cluster.md
@@ -1,4 +1,4 @@
-# 部署 OceanBase 数据库生产环境
+# 使用命令行部署 OceanBase 数据库生产环境
 
 ## 名词解释
 
@@ -45,8 +45,7 @@
 | OBServer 节点  | 10.10.10.3 | OceanBase 数据库 Zone3   |
 | OBAgent        | 10.10.10.1、10.10.10.2、10.10.10.3 | OceanBase 监控工具   |
 | ODP            | 10.10.10.4 | OceanBase 访问反向代理   |
-| Prometheus     | 10.10.10.4 | 系统监控和告警工具包      |
-| Grafana        | 10.10.10.4 | 数据可视化工具           |
+| OCP Express    | 10.10.10.4 | 基于 Web 的 Oceanbase 4.x 管理工具      |
 
 <main id="notice" type='explain'>
   <h4>说明</h4>
@@ -77,7 +76,7 @@
 
 若您的机器可以连接网络，可执行如下命令在线安装。
 
-```bash
+```shell
 [admin@test001 ~]$ bash -c "$(curl -s https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/download-center/opensource/oceanbase-all-in-one/installer.sh)"
 [admin@test001 ~]$ source ~/.oceanbase-all-in-one/bin/env.sh
 ```
@@ -90,7 +89,7 @@
 
 2. 在安装包所在目录下执行如下命令解压安装包并安装。
 
-   ```bash
+   ```shell
    [admin@test001 ~]$ tar -xzf oceanbase-all-in-one-*.tar.gz
    [admin@test001 ~]$ cd oceanbase-all-in-one/bin/
    [admin@test001 bin]$ ./install.sh
@@ -109,7 +108,7 @@
 
 1. 禁用远程仓库
 
-   ```bash
+   ```shell
    [admin@test001 rpm]$ obd mirror disable remote
    ```
 
@@ -120,13 +119,13 @@
 
 2. 将安装包添加至本地镜像
 
-   ```bash
+   ```shell
    [admin@test001 rpm]$ obd mirror clone *.rpm
    ```
 
 3. 查看本地镜像中安装包列表
 
-   ```bash
+   ```shell
    [admin@test001 rpm]$ obd mirror list local
    ```
 
@@ -158,7 +157,7 @@
 
    * 分布式部署 + ODP 配置样例：mini-distributed-with-obproxy-example.yaml、distributed-with-obproxy-example.yaml
 
-   * 分布式部署 + ODP + 监控配置样例：all-components-min.yaml、all-components.yaml
+   * 分布式部署 + ODP + OCP Express 配置样例：all-components-min.yaml、all-components.yaml
 
 5. 修改配置文件。
 
@@ -208,10 +207,16 @@
           system_memory: 30G # The reserved system memory. system_memory is reserved for general tenants. The default value is 30G.
           datafile_size: 192G # Size of the data file. 
           log_disk_size: 192G # The size of disk space used by the clog files.
-          syslog_level: INFO # System log level. The default value is INFO.
           enable_syslog_wf: false # Print system logs whose levels are higher than WARNING to a separate log file. The default value is true.
           enable_syslog_recycle: true # Enable auto system log recycling or not. The default value is false.
           max_syslog_file_count: 4 # The maximum number of reserved log files before enabling auto recycling. The default value is 0.
+          skip_proxy_sys_private_check: true
+          enable_strict_kernel_release: false
+          ocp_meta_tenant: # The config for ocp express meta tenant
+            tenant_name: ocp
+            max_cpu: 1
+            memory_size: 2G
+            log_disk_size: 7680M
           mysql_port: 2881 # External port for OceanBase Database. The default value is 2881. DO NOT change this value after the cluster is started.
           rpc_port: 2882 # Internal port for OceanBase Database. The default value is 2882. DO NOT change this value after the cluster is started.
           # The working directory for OceanBase Database. OceanBase Database is started under this directory. This is a required field.
@@ -271,7 +276,7 @@
         <p><code>observer_sys_password</code> 的值需设置为和 <code>proxyro_password</code> 的值相同，两者均表示 <code>proxyro@sys</code> 的密码。</p>
       </main>
 
-   4. 修改监控组件的 IP 和 `home_path`。
+   4. 修改 obagent 和 ocp-express 组件的 IP 和 `home_path`。
 
       ```yaml
       obagent:
@@ -287,22 +292,20 @@
             ip: 10.10.10.3
         global:
           home_path: /home/admin/obagent
-          ob_monitor_status: active
-      prometheus:
-        depends:
+      ocp-express:
+        depeneds:
+          - oceanbase-ce
+          - obproxy-ce
           - obagent
         servers:
-          - 10.10.10.4
+          - name: server1
+            ip: 10.10.10.4
         global:
-          home_path: /home/admin/prometheus
-      grafana:
-        depends:
-          - prometheus
-        servers:
-          - 10.10.10.4
-        global:
-          home_path: /home/admin/grafana
-          login_password: *********
+          # The working directory for prometheus. prometheus is started under this directory. This is a required field.
+          home_path: /home/oceanbase/ocp-server
+          memory_size: 1G # The memory size of ocp-express server.  The recommend value is 512MB * (expect node num + expect tenant num) * 60MB.
+          # logging_file_total_size_cap: 10G # The total log file size of ocp-express server
+          # logging_file_max_history: 1 # The maximum of retention days the log archive log files to keep. The default value is unlimited
       ```
 
 ### 步骤三：部署 OceanBase 集群
@@ -314,7 +317,7 @@
 
 1. 部署 OceanBase 数据库
 
-   ```bash
+   ```shell
    [admin@test001 ~]$ obd cluster deploy obtest -c all-components.yaml
    ```
 
@@ -322,25 +325,15 @@
 
 2. 启动 OceanBase 数据库
 
-   ```bash
+   ```shell
    [admin@test001 ~]$ obd cluster start obtest
    ```
 
-   当安装了 Grafana 或 Prometheus 时，会输出 Grafana 或 Prometheus 的访问地址，类似以下输出。在阿里云或其他云环境下，因为安装程序可能无法获取公网 IP，可能输出的是内网地址（在本例中，为 10.10.10.4），此 IP 非公网地址，您需要使用正确的地址。
-
-   ```bash
-   +------------------------------------------------------+
-   |                      prometheus                      |
-   +---------------------------+------+----------+--------+
-   | url                       | user | password | status |
-   +---------------------------+------+----------+--------+
-   | http://10.10.10.4:9090    |      |          | active |
-   +---------------------------+------+----------+--------+
-   ```
+   当安装了 OCP Express 时，会输出 OCP Express 的访问地址。在阿里云或其他云环境下，安装程序可能因无法获取公网 IP 而输出内网地址，此 IP 非公网地址，您需要使用正确的地址。
 
 3. 查看 OceanBase 集群状态
 
-   ```bash
+   ```shell
    # 查看 OBD 管理的集群列表
    [admin@test001 ~]$ obd cluster list
 
@@ -352,7 +345,7 @@
 
    OceanBase 数据库有数百个配置项，有些配置是耦合的，在您熟悉 OceanBase 数据库之前，不建议您修改示例配件文件中的配置。此处示例用来说明如何修改配置，并使之生效。
 
-   ```bash
+   ```shell
    # 使用 edit-config 命令进入编辑模式，修改集群配置
    # 修改配置并保存退出后，OBD 会告知如何使得此次修改生效，复制 OBD 输出的命令即可
    [admin@test001 ~]$ obd cluster edit-config obtest
@@ -368,7 +361,7 @@
 
 运行以下命令，使用 OBClient 客户端连接 OceanBase 数据库：
 
-```bash
+```shell
 obclient -h<IP> -P<PORT> -uroot@sys -p
 ```
 
@@ -387,7 +380,7 @@ obclient -h<IP> -P<PORT> -uroot@sys -p
 
 * 方法一：使用 OBD 创建用户租户。
 
-  ```bash
+  ```shell
   obd cluster tenant create <deploy name> [-n <tenant name>] [flags]
   ```
 
