--- a/zh-CN/4.deploy/5.deploy-oceanbase-database-community-edition/2.local-deployment/4.deploy-by-ui/1.deploy-by-obd.md
+++ b/zh-CN/4.deploy/5.deploy-oceanbase-database-community-edition/2.local-deployment/4.deploy-by-ui/1.deploy-by-obd.md
@@ -29,7 +29,7 @@
 
 当您选择在线部署时，可以参考本节命令在中控机上安装 OBD。
 
-```bash
+```shell
 [admin@test001 ~]$ sudo yum install -y yum-utils
 [admin@test001 ~]$ sudo yum-config-manager --add-repo https://mirrors.aliyun.com/oceanbase/OceanBase.repo
 [admin@test001 ~]$ sudo yum install -y ob-deploy
@@ -42,7 +42,7 @@
 
 您可从 [OceanBase 软件下载中心](https://www.oceanbase.com/softwarecenter) 下载最新的 all-in-one 安装包，并将其复制到中控机中。执行如下命令解压并安装：
 
-```bash
+```shell
 [admin@test001 ~]$ tar -xzf oceanbase-all-in-one-*.tar.gz
 [admin@test001 ~]$ cd oceanbase-all-in-one/bin/
 [admin@test001 bin]$ ./install.sh
@@ -55,7 +55,7 @@
 
    命令行执行 `obd web` 命令启动白屏界面，单击输出的地址访问白屏界面，在白屏界面中单击 **开启体验之旅** 即可进入到 OceanBase 数据库的配置界面。
 
-   ```bash
+   ```shell
    [admin@test001 ~]$ obd web
    start OBD WEB in 0.0.0.0:8680
    please open http://10.10.10.1:8680
@@ -77,7 +77,7 @@
 
    **部署配置** 界面可以配置集群名称，部署类型和部署组件。
 
-   ![部署配置](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/obd/V2.0.0/zh-CN/2.quick-start/3.use-ui-deploy-oceanbase-01.png)
+   <img width="819.6" height="490.8" src="https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.1.0/4.deploy/5.deploy-oceanbase-database-community-edition/4.deploy-by-ui/3.use-ui-deploy-oceanbase-01.png" alt="部署配置">
 
    其中：
 
@@ -95,7 +95,7 @@
 
    **节点配置** 界面可以配置数据库和组件节点，部署用户以及软件安装路径。
 
-   ![节点配置](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/obd/V2.0.0/zh-CN/2.quick-start/3.use-ui-deploy-oceanbase-02.png)
+   <img width="868.8" height="523.2" src="https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.1.0/4.deploy/5.deploy-oceanbase-database-community-edition/4.deploy-by-ui/3.use-ui-deploy-oceanbase-02.png" alt="节点配置">
 
    其中：
 
@@ -113,7 +113,7 @@
 
    **集群配置** 界面可对集群进行配置，包括系统租户的管理员用户（root@sys）密码、数据和日志目录、数据库及各组件的端口和参数配置等。
 
-   ![集群配置](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/obd/V2.0.0/zh-CN/2.quick-start/3.use-ui-deploy-oceanbase-03.png)
+   <img width="788.4" height="549" src="https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.1.0/4.deploy/5.deploy-oceanbase-database-community-edition/4.deploy-by-ui/3.use-ui-deploy-oceanbase-03.png" alt="集群配置">
 
    其中：
 
@@ -135,19 +135,19 @@
 
    若预检查报错，您可根据页面建议选择 **自动修复** 或者单击 **了解更多方案** 跳转至错误码文档，参考文档自行修改。所有报错修改后，可单击 **重新检查** 再次进行预检查。
 
-   ![预检查](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/obd/V2.0.0/zh-CN/2.quick-start/3.use-ui-deploy-oceanbase-04.png)
+   <img width="805.2" height="322.2" src="https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.1.0/4.deploy/5.deploy-oceanbase-database-community-edition/4.deploy-by-ui/3.use-ui-deploy-oceanbase-04.png" alt="预检查">
 
 6. 部署
 
    预检查通过后，单击 **部署** 即可开始 OceanBase 数据库的部署。
 
-   ![部署](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/obd/V2.0.0/zh-CN/2.quick-start/3.use-ui-deploy-oceanbase-05.png)
+   <img width="898.8" height="523.8" src="https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.1.0/4.deploy/5.deploy-oceanbase-database-community-edition/4.deploy-by-ui/3.use-ui-deploy-oceanbase-07.png" alt="部署">
 
    其中：
 
    * 部署成功后可复制显示的连接串，在黑屏界面执行连接 OceanBase 数据库。
 
-   * 单击输出的 OCPExpress 组件的连接串可跳转到 OCP Express 的登录界面，通过默认的账号密码登录并修改密码后可使用白屏界面管理集群。
+   * 单击输出的 OCPExpress 组件的连接串可跳转到 OCP Express 的登录界面，通过界面展示的账号密码登录并修改密码后可使用白屏界面管理集群。
 
      <main id="notice" type='explain'>
        <h4>说明</h4>
@@ -156,7 +156,12 @@
 
    * 将鼠标悬停在 **查看日志** 按钮后单击 **复制信息**，在命令行中粘贴该信息后执行可查看对应组件的日志位置。
   
-7. 单击 **完成** 退出部署程序
+7. 单击 **完成**，结束部署
+
+<main id="notice" type='notice'>
+  <h4>注意</h4>
+  <p> 如需部署多个集群，您需在白屏界面单击 <b>完成</b> 结束当前 OBD 进程后才可再次执行 <code>obd web</code> 命令进行下一集群的部署。 </p>
+</main>
 
 ## 相关操作
 
@@ -171,7 +176,7 @@
 
 您可在任意一台网络与 OCP Express 所在节点连通的机器上执行如下命令进行验证。
 
-```bash
+```shell
 # ocp_express_node_username：ocp_express 所在节点的用户名
 # ocp_express_node_ip：ocp_express 所在节点 IP
 [admin@test001 ~]$ ssh <ocp_express_node_username>@<ocp_express_node_ip> 'java -version'
@@ -188,11 +193,11 @@ OpenJDK 64-Bit Server VM (build 25.362-b08, mixed mode)
   
   如下图，在配置项 `java_bin` 中配置 Java 的真实路径，如 `/jdk8/bin/java`。
   
-  ![更多配置](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/obd/V2.0.0/zh-CN/2.quick-start/3.use-ui-deploy-oceanbase-07.png)
+   <img width="807.6" height="514.8" src="https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V4.1.0/4.deploy/5.deploy-oceanbase-database-community-edition/4.deploy-by-ui/3.use-ui-deploy-oceanbase-06.png" alt="更多配置">
 
 * 方法二：将 Java 可执行文件软链接到 `/usr/bin/java` 中
   
-  ```bash
+  ```shell
   [admin@test001 bin]$ pwd
   /jdk8/bin
   [admin@test001 bin]$ ln -s /jdk8/bin/java  /usr/bin/java
@@ -202,7 +207,7 @@ OpenJDK 64-Bit Server VM (build 25.362-b08, mixed mode)
 
 您可执行如下命令对 OBD 部署的集群进行管理。更多操作详见 [集群命令组](https://www.oceanbase.com/docs/community-obd-cn-10000000001031933)。
 
-```bash
+```shell
 # 查看集群列表
 [admin@test001 ~]$ obd cluster list
 
@@ -222,12 +227,12 @@ OpenJDK 64-Bit Server VM (build 25.362-b08, mixed mode)
 
 1. 进到组件安装包所在目录下，将安装包添加至本地镜像库
 
-   ```bash
+   ```shell
    [admin@test001 rpm]$ obd mirror clone *.rpm
    ```
 
 2. 查看本地镜像中安装包列表
 
-   ```bash
+   ```shell
    [admin@test001 rpm]$ obd mirror list local
    ```
